# ethio-tts-api

./: .dockerignore  .env.example  .env.railway  .gitignore  .railway-env-template.txt  API_V1_GUIDE.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  GIT_COMMIT_PLAN.md  METRICS_IMPROVEMENTS.md  MULTILANG_GUIDE.md  QUICK_START_V1.md  RAILWAY_CHECKLIST.txt  RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_TROUBLESHOOTING.md  README.md  READY_FOR_RAILWAY.md  RENDER_DEPLOY.md  START_HERE.md  UPGRADE_SUMMARY.md  WEBHOOKS_GUIDE.md  build.sh  install_cpu_torch.bat  install_cpu_torch.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py  run_server.py
.kiro/specs/webhooks/: IMPLEMENTATION_PLAN.md  QUICK_SUMMARY.md  requirements.md
.nixpacks/: debian  nixpacks.toml
api/: __init__.py  __main__.py  config.py  jobs.py  main.py  main_legacy_backup.py  model_manager.py  models.py  pyproject.toml  requirements.txt  storage.py  utils.py  webhooks.py  workers.py
api/middleware/: __init__.py  api_key.py  metrics.py  rate_limit.py
api/static/: index.html
api/v1/: __init__.py  routes.py
examples/: README.md  multilang_web_demo.html  nodejs_client.js  python_client.py  test.html  web_integration.html
