[project]
name = "oromo-tts-api"
version = "2.0.0"
description = "Multi-Language TTS API - Text-to-speech service for Oromo and Amharic using Meta's MMS-TTS models"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "boltons>=25.0.0",
    "deepdiff>=8.6.1",
    "diskcache>=5.6.3",
    "fastapi>=0.119.0",
    "glom>=24.11.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.19.0",
    "pyinstrument>=5.1.1",
    "pydantic-settings>=2.0.0",
    "pyrsistent>=0.20.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "torch==2.9.1",
    "tqdm>=4.66.0",
    "transformers>=4.57.0",
    "uroman>=0.3.0",
    "uvicorn[standard]>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]